# vggt-factor-refinement

./: README.md  benchmark.py  benchmark_chunked.py  benchmark_gs.py  benchmark_scaling.py  debug_replica.py  demo.py  diagnose.py  pyproject.toml  run.py  visualize_3d.py
src/: adaptive_chunking.py  chunked_pipeline.py  covisibility.py  cross_chunk_align.py  data_loaders.py  depth_fusion.py  dynamic_mask.py  factor_graph.py  gaussian_init.py  gaussian_render.py  isam2_backend.py  keyframe_selection.py  loop_closure.py  metrics.py  multi_backend.py  photometric_ba.py  pipeline.py  point_ba.py  replica_loader.py  sl4_graph.py  trajectory_smoothing.py  uncertainty.py  vggt_wrapper.py
src/exporters/: __init__.py  colmap_export.py  nerfstudio_export.py  ply_export.py  splat_export.py
