[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vggt-factor-refinement"
version = "0.2.0"
description = "VGGT + Factor Graph: Video to 3D in one command. Outputs COLMAP, nerfstudio, PLY, splat formats."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jash Shah", email = "jashshah999@gmail.com"},
]
keywords = ["vggt", "3d-reconstruction", "slam", "factor-graph", "gaussian-splatting", "colmap", "nerfstudio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy",
    "opencv-python-headless",
    "tqdm",
    "scipy",
]

[project.optional-dependencies]
gtsam = ["gtsam"]
full = ["gtsam", "gsplat", "open3d", "matplotlib"]
all = ["gtsam", "gsplat", "open3d", "matplotlib", "viser"]

[project.scripts]
vggt-recon = "run:main"

[project.urls]
Homepage = "https://github.com/jashshah999/vggt-factor-refinement"
Issues = "https://github.com/jashshah999/vggt-factor-refinement/issues"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
